// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given legal officer, when rendering, then render legal officer UI or redirect to login 1`] = `
<BrowserRouter>
  <Switch>
    <Route
      path="/legal-officer"
    >
      <RenderOrRedirectToLogin
        render={[Function]}
      />
    </Route>
    <Route
      path="/user"
    >
      <Redirect
        to="/legal-officer"
      />
    </Route>
    <Route
      path="/login"
    >
      <Login />
    </Route>
    <Route
      path="/certificate/:locId"
    >
      <Certificate />
    </Route>
    <Route
      path="/"
    >
      <Redirect
        to="/legal-officer"
      />
    </Route>
  </Switch>
</BrowserRouter>
`;

exports[`Given no addresses, when rendering, then null 1`] = `null`;

exports[`Given null addresses, when rendering, then null 1`] = `null`;

exports[`Given undefined current address, when rendering, then enable redirect to login via either legal officer or user route 1`] = `
<BrowserRouter>
  <Switch>
    <Route
      path="/legal-officer"
    >
      <Redirect
        to="/user"
      />
    </Route>
    <Route
      path="/user"
    >
      <RenderOrRedirectToLogin
        render={[Function]}
      />
    </Route>
    <Route
      path="/login"
    >
      <Login />
    </Route>
    <Route
      path="/certificate/:locId"
    >
      <Certificate />
    </Route>
    <Route
      path="/"
    >
      <Redirect
        to="/user"
      />
    </Route>
  </Switch>
</BrowserRouter>
`;

exports[`Given wallet user, when rendering, then render user UI or redirect to login 1`] = `
<BrowserRouter>
  <Switch>
    <Route
      path="/legal-officer"
    >
      <Redirect
        to="/user"
      />
    </Route>
    <Route
      path="/user"
    >
      <RenderOrRedirectToLogin
        render={[Function]}
      />
    </Route>
    <Route
      path="/login"
    >
      <Login />
    </Route>
    <Route
      path="/certificate/:locId"
    >
      <Certificate />
    </Route>
    <Route
      path="/"
    >
      <Redirect
        to="/user"
      />
    </Route>
  </Switch>
</BrowserRouter>
`;
